Set the parent to the proper URL so people can test

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
                                 //video: "<video ID>",
                                 //collection: "<collection ID>",
                                 // only needed if your site is also embedded on embed.example.com and othersite.example.com
-                                parent: ["<TODO>"]
+                                parent: ["eijebong.github.io"]
                             };
                 var player = new Twitch.Player("player", options);
             </script>
 
-            <iframe id="chat" src="https://www.twitch.tv/embed/360chrism/chat?parent=<TODO>&darkpopout"/>
+            <iframe id="chat" src="https://www.twitch.tv/embed/360chrism/chat?parent=eijebong.github.io&darkpopout"/>
         </main>
 
 
