--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         margin: auto;
         height: 100%;
         flex: 1 20%;
+        border: none;
    }
 
     @media screen and (max-width: 800px) {
